[tool.poetry]
name = "flyingroutes-razfork"
version = "0.1.0"
description = "raz poetry fork"
authors = ["Raz"]
license = "MIT"
readme = "README.md"
packages = [{include = "flyingroutes_razfork"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
